streamlit-local/streamlit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  labels:
    app: streamlit
spec:
  type: ClusterIP
  ports:
  - port: 8501
    targetPort: 8501
  selector:
    app: streamlit
