streamlit-local/streamlit-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: streamlit
  name: streamlit
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8501
  to:
    kind: Service
    name: streamlit
